# neural-net-encryption

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
configs/: anc_eval.yaml  anc_recommended.yaml  anc_small.yaml  baseline.yaml  shared.yaml  tpm_default.yaml
docs/: ANC_IMPLEMENTATION.md
src/: __init__.py  demo_cli.py
src/baseline/: __init__.py  aead.py  benchmark.py
src/data/: __init__.py  bits.py
src/evaluation/: __init__.py  eval_anc.py
src/models/: __init__.py  anc.py
src/tpm/: __init__.py  run_tpm.py  simulator.py
src/training/: __init__.py  train_anc.py
src/utils/: __init__.py  config.py  errors.py  io.py  plot.py  seed.py
tests/: test_baseline_crypto.py  test_bits.py  test_checkpoint.py  test_demo_cli.py  test_models_shapes.py  test_smoke.py  test_tpm.py  test_training_step.py
