[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-net-encryption"
version = "0.1.0"
description = "Experimental neural cryptography research lab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "PyYAML>=6.0",
  "matplotlib>=3.8",
  "cryptography>=42.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ml = ["torch>=2.5"]

[project.scripts]
anc-train = "src.training.train_anc:main"
anc-eval = "src.evaluation.eval_anc:main"
anc-tpm = "src.tpm.run_tpm:main"
anc-baseline = "src.baseline.benchmark:main"
anc-demo = "src.demo_cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]
